@@ -642,6 +642,28 @@ void print_help(int mode) {
 "                       See also the -proxy option below for additional ways\n"
 "                       to plumb reverse connections.\n"
 "\n"
+"                       Reverse SSL: using -connect in -ssl mode makes x11vnc\n"
+"                       act as an SSL client (initiates SSL connection) rather\n"
+"                       than an SSL server.  The idea is x11vnc might be\n"
+"                       connecting to stunnel on the viewer side with the\n"
+"                       viewer in listening mode.  If you do not want this\n"
+"                       behavior, use -env X11VNC_DISABLE_SSL_CLIENT_MODE=1.\n"
+"                       With this the viewer side can act as the SSL client\n"
+"                       as it normally does for forward connections.\n"
+"\n"
+"                       Reverse SSL Repeater mode:  This will work, but note\n"
+"                       that if the VNC Client does any sort of a 'Fetch Cert'\n"
+"                       action before connecting, then the Repeater will\n"
+"                       likely drop the connection and both sides will need\n"
+"                       to restart.  Consider the use of -connect_or_exit\n"
+"                       and -loop300,2 to have x11vnc reconnect once to the\n"
+"                       repeater after the fetch.  You will probably also want\n"
+"                       to supply -sslonly to avoid x11vnc thinking the delay\n"
+"                       in response means the connection is VeNCrypt.  The env\n"
+"                       var X11VNC_DISABLE_SSL_CLIENT_MODE=1 discussed above\n"
+"                       may also be useful (i.e. the viewer can do a forward\n"
+"                       connection as it normally does.)\n"
+"\n"
 "                       IPv6: as of x11vnc 0.9.10 the -connect option should\n"
 "                       connect to IPv6 hosts properly.  If there are problems\n"
 "                       you can disable IPv6 by setting -DX11VNC_IPV6=0\n"
